<resources>
    <string name="app_name">KTS - Koçluk Takip Sistemi</string>
    <string name="log_in">Giriş Yap</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="i_want_to_sign_up">Hesabın yok mu?</string>
    <string name="student">ÖĞRENCİ</string>
    <string name="teacher">ÖĞRETMEN</string>
    <string name="sign_up">Kaydol</string>
    <string name="sim_ve_soyisim">İsim ve Soyisim</string>
    <string name="s_n_f">Sınıf</string>
    <string name="alan_se_imi_yap_n_z">Alan Seçiniz:</string>
    <string name="ders_se_imi_yap_n_z">Ders Seçiniz:</string>
    <string name="k_yap">ÇIKIŞ YAP</string>
    <string name="merhaba">Merhaba, </string>
    <string name="add_something">Add Something</string>
    <string name="mant_k">Mantık</string>
    <string name="k_meler">Kümeler</string>
    <string name="denklemler_ve_e_itsizlikler">Denklemler ve Eşitsizlikler</string>
    <string name="genler">Üçgenler</string>
    <string name="veri">Veri</string>
    <string name="al_man_n_dersini_ve_konusunu_belirle">Çalışmanın Dersini ve Konusunu Seç</string>
    <string name="sinif_sec">🎒 Sınıf Seçin</string>
    <string name="ders_sec">📖 Ders Seçin</string>
    <string name="profiliniz">Profiliniz</string>
    <string name="profil_tercihiniz">Profil tercihiniz</string>
    <string name="program_sec">📋 Müfredat Seçin</string>
    <string name="varsayilan_mufredat">Varsayılan müfredat</string>
    <string name="matematik">Matematik</string>
    <string name="fizik">Fizik</string>
    <string name="ka_dakika_konu_al_t_n">Kaç Dakika Konu Çalıştın?</string>
    <string name="ka_tane_soru_zd_n">Kaç Tane Soru Çözdün?</string>
    <string name="ka_dakika_testi_zd_n">Kaç Dakika Test Çözdün?</string>
    <string name="konu">Konu:</string>
    <string name="b_tt">BİTTİ</string>
    <string name="saya">Sayaç</string>
    <string name="_00_00">00:00</string>
    <string name="a_k_tema">Açık Tema</string>
    <string name="t_m_renciler">Tüm Öğrenciler</string>
    <string name="al_malar">Çalışmalar</string>
    <string name="toplam_al_la_s_re">Toplam Çalışılan Süre</string>
    <string name="renci_ara">Öğrenci Ara:</string>
    <string name="tyt">TYT</string>
    <string name="ayt">AYT</string>
    <string name="t_r">Tür:</string>
    <string name="konu_se_iniz">Konu Seçiniz:</string>
    <string name="tema_sec">Tema Seçin</string>
    <string name="tema_seciniz">Tema:</string>
    <string name="maarif">Maarif</string>
    <string name="maarif_tema_yok">Bu ders için henüz Maarif teması tanımlanmamış. Lütfen öğretmeninizle iletişime geçin.</string>
    <string name="program_subtitle_format">%1$s · %2$d. sınıf</string>
    <string name="alt_konu_se_iniz">Alt Konu Seçiniz</string>
    <string name="al_ma_ara">Çalışma Ara:</string>
    <string name="geometri">Geometri</string>
    <string name="kimya">Kimya</string>
    <string name="biyoloji">Biyoloji</string>
    <string name="co_rafya">Coğrafya</string>
    <string name="tarih">Tarih</string>
    <string name="t_rk_e">Türkçe-Edebiyat</string>
    <string name="zaman_aral">Zaman Aralığı:</string>
    <string name="g_revlerim">Görevlerim</string>
    <string name="g_revler">Görevler</string>
    <string name="statusicon">statusIcon</string>
    <string name="g_rev_al_ma_s_resi">Görev Çalışma Süresi</string>
    <string name="g_rev_soru_say_s">Görev Soru Sayısı</string>
    <string name="biti_tarihi_se">Bitiş Tarihi Seç</string>
    <string name="g_revi_kaydet">Görevi Kaydet</string>
    <string name="kurum_kodu">Kurum Kodu</string>
    <string name="do_ru">Doğru</string>
    <string name="yanl">Yanlış</string>
    <string name="ko_luk_statistikleri">Koçluk İstatistikleri</string>
    <string name="grafik_olarak_g_ster">Grafik Olarak Göster</string>
    <string name="tamamlanmayan_g_revler">Tamamlanmayan Görevler</string>
    <string name="tamamlanan_g_revler">Tamamlanan Görevler</string>
    <string name="t_m_g_revler">Tüm Görevler</string>
    <string name="g_rev_t_r">Görev Türü:</string>
    <string name="yanl_konular">Yanlış Konuları</string>
    <string name="felsefe">Felsefe</string>
    <string name="din">Din</string>
    <string name="toplam_yanl_0">Toplam Yanlış: 0</string>
    <string name="show">Show</string>
    <string name="default_notification_channel_id">kts_channel_general</string>
    <string name="kalan_g_rev_miktar">Kalan Görev Miktarı:</string>
    <string name="ifreni_mi_unuttun">Şifreni mi Unuttun?</string>
    <string name="kay_t_olan_ki_i">Kayıt Olan Kişi:</string>
    <string name="kullan_m_ko_ullar_n"><u>Kullanım Koşullarını</u></string>
    <string name="gizlilik_politikas_n"><u>Gizlilik Politikasını</u></string>
    <string name="erez_politikas_n"><u>Çerez Politikasını</u></string>
    <string name="kabul_etmi_olur">Kabul Etmiş Olur</string>
    <string name="di_er">Diğer</string>
    <string name="bu_haftaki_toplam_al_ma">Bu Haftaki Toplam Çalışma:</string>
    <string name="hedef_toplam_soru">Hedef Toplam Soru:</string>
    <string name="hedef_toplam_al_ma">Hedef Toplam Çalışma (dk):</string>
    <string name="haftal_k_hedefler">Haftalık Hedefler</string>
    <string name="save">Kaydet</string>
    <string name="ge_en_haftan_n_sonu_lar">Geçen Haftanın Sonuçları</string>
    <string name="ders_ara">Ders Ara:</string>
    <string name="grafik_halinde_g_rmek_in_herhangi_bir_derse_t_klay_n">(Grafik Halinde Görmek İçin Herhangi Bir Derse Tıklayın)</string>
    <string name="al_ma_zaman_aral">Çalışma Zaman Aralığı</string>
    <string name="konu_al_ma_grafi_i">Konu - Çalışma Grafiği</string>
    <string name="ko_retmenin">Koç Öğretmenin:</string>
    <string name="toplam">Toplam:</string>
    <string name="yi">İyi</string>
    <string name="orta">Orta</string>
    <string name="k_t">Kötü</string>
    <string name="recep_tayyip_erdo_an_anadolu_mam_hatip_lisesi">Recep Tayyip Erdoğan Anadolu İmam-Hatip Lisesi</string>
    <string name="problem">Problem</string>
    <string name="paragraf">Paragraf</string>
    <string name="yeni_sim_ve_soyisim">Yeni İsim ve Soyisim</string>
    <string name="sim">İsim:</string>
    <string name="hesab_sil">Hesabı Sil</string>
    <string name="alt_ba_l_klar">Alt Başlıklar</string>
    <string name="ortalama_toplam_net">Ortalama Toplam Net:</string>
    <string name="uygulamay_g_ncellemeniz_gerekmektedir">Uygulamayı Güncellemeniz Gerekmektedir.</string>
    <string name="g_ncellemek_in_t_klay_n">Güncellemek İçin Tıklayın</string>
    <string name="update_required_title">Güncelleme gerekli</string>
    <string name="update_available_title">Yeni sürüm mevcut</string>
    <string name="update_version_info">Yüklü sürüm: %1$s · Güncel: %2$s</string>
    <string name="update_play_store">Play Store\'da güncelle</string>
    <string name="update_later">Daha sonra</string>
    <string name="de_erlendirmeler">Değerlendirmeler</string>
    <string name="sample_using_cropimageview">Sample using CropImageView</string>
    <string name="sample_of_customactivity">Sample of CustomActivity</string>
    <string name="sample_calling_cropimage">Sample calling CropImage</string>
    <string name="haftal_k_hedef_ekle_d_zenle">Haftalık Hedef Ekle/Düzenle</string>
    <string name="excel_tablosu_olu_tur">Excel Tablosu Oluştur</string>
    <string name="excel_rapor_turu">Rapor Türü Seçin</string>
    <string name="excel_rapor_ozet">Özet (toplam ve ortalamalar)</string>
    <string name="excel_rapor_ders_bazli">Ders bazlı (öğrenci başına, ders sütunları)</string>
    <string name="excel_dosya_olusturuldu">Excel dosyası başarıyla oluşturuldu</string>
    <string name="excel_dosya_hata">Excel oluşturulurken hata: %1$s</string>
    <string name="excel_lutfen_bekleyin">Lütfen bekleyiniz…</string>
    <string name="excel_rapor_istatistik">Ders İstatistikleri</string>
    <string name="excel_rapor_ogrenci_calisma">Öğrenci Çalışmaları</string>
    <string name="excel_rapor_gondermeyen">Rapor Göndermeyenler</string>
    <string name="excel_rapor_gun_sayisi">Rapor Atılmayan Gün Sayıları</string>
    <string name="renci_s_ralamas">Öğrenci Sıralaması</string>
    <string name="furkan_karaketir_taraf_ndan_geli_tirildi">Furkan Karaketir Tarafından Geliştirildi</string>
    <string name="kaydet">Kaydet</string>
    <string name="renci_d_zenle">Öğrenci Düzenle</string>
    <string name="mesaj_ba_l">Bildirim Başlığı</string>
    <string name="mesaj_eri_i">Bildirim İçeriği</string>
    <string name="mesaj_g_nder">Bildirim Gönder</string>
    <string name="g_nder">Gönder</string>
    <string name="hedef_se_iniz">Hedef Seçiniz:</string>
    <string name="ders_program">Çalışma Programı</string>
    <string name="pazartesi">Pazartesi</string>
    <string name="sal">Salı</string>
    <string name="ar_amba">Çarşamba</string>
    <string name="per_embe">Perşembe</string>
    <string name="cuma">Cuma</string>
    <string name="cumartesi">Cumartesi</string>
    <string name="pazar">Pazar</string>
    <string name="ka_dakika">Kaç Dakika?</string>
    <string name="g_n_se_iniz">Gün Seçiniz</string>
    <string name="ka_nc_ders">Kaçıncı Ders?</string>
    <string name="rapor_g_ndermeyenler">Rapor Göndermeyenler</string>
    <string name="rapor_at_lmayan_g_n_say_lar_n_g_ster">Rapor Atılmayan Gün Sayılarını Göster</string>
    <string name="verileri_getir">Verileri Getir</string>
    <string name="kay_tl_bir_hesab_n_varsa_bu_sayfadan_giri_yapabilirsin">Kayıtlı bir hesabın varsa bu sayfadan giriş yapabilirsin.</string>
    <string name="google_ile_giri_yap">Google ile Giriş Yap</string>
    <string name="ya_da">ya da</string>
    <string name="kay_tl_bir_hesab_n_yoksa_bu_sayfadan_kay_t_olabilirsin">Kayıtlı bir hesabın yoksa bu sayfadan kayıt olabilirsin.</string>
    <string name="google_ile_kaydol">Google ile Kaydol</string>
    <string name="kullan_m_ko_ullar_n_gizlilik_politikas_n_ve_erez_politikas_n_kabul_ediyorum">Kullanım Koşullarını, Gizlilik Politikasını ve Çerez Politikasını kabul ediyorum</string>
    <string name="hesap_olu_tur">Hesap Oluştur</string>
    <string name="retmen_misin">Öğretmen misin?</string>
    <string name="hesab_n_var_m">Hesabın var mı?</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="statistikler">İstatistikler</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="renci_say_s">Öğrenci Sayısı:</string>
    <string name="al_ma_ekle">Çalışma Ekle</string>
    <string name="ortalama">Ortalama:</string>
    <string name="ders_ad">Ders Adı</string>
    <string name="ort_s_re">Ort. Süre</string>
    <string name="ort_soru">Ort. Soru</string>
    <string name="al_ma_tarihi">Çalışma Tarihi:</string>
    <string name="main_stats_student_title">Bu hafta özeti</string>
    <string name="studies_student_stats_title">%1$s özeti</string>
    <string name="main_stats_teacher_title">Sınıf özeti</string>
    <string name="main_stat_weekly_study">Haftalık süre</string>
    <string name="main_stat_weekly_questions">Haftalık soru</string>
    <string name="main_stat_period_study">Çalışma süresi</string>
    <string name="main_stat_period_questions">Soru sayısı</string>
    <string name="main_stat_report_days">Rapor günü</string>
    <string name="main_stat_period_report_days">Rapor günü</string>
    <string name="main_stat_report_rate">Rapor oranı</string>
    <string name="main_stat_class_study">Sınıf çalışması</string>
    <string name="main_stat_rating_rate">Değerlendirme</string>
    <string name="message_sending">Gönderiliyor…</string>
    <string name="message_screen_subtitle">Öğrencilere anlık bildirim gönderin</string>
    <string name="message_target_helper">Koçluğum: yalnızca sizin öğrencileriniz. Okulum: kurumdaki tüm kullanıcılar.</string>
    <string name="message_target_spinner_desc">Bildirim hedef kitlesi seçimi</string>
    <string name="message_send_button_desc">Bildirimi gönder</string>
</resources>