<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/signUp"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/sign_up"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kay_tl_bir_"
            android:layout_width="320dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/kay_tl_bir_hesab_n_yoksa_bu_sayfadan_kay_t_olabilirsin" />

        <Button
            android:id="@+id/signInGoogleButton"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:text="@string/google_ile_kaydol"
            app:icon="@drawable/google">

        </Button>

        <TextView
            android:id="@+id/or"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ya_da" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputNameAndSurname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/sim_ve_soyisim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameAndSurnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="40" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputRegisterEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputRegisterPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/acceptCheckBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/kullan_m_ko_ullar_n_gizlilik_politikas_n_ve_erez_politikas_n_kabul_ediyorum" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textSize="18sp" />


        <RelativeLayout
            android:id="@+id/layout21"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="30dp">

            <TextView

                android:id="@+id/i_want_sign_up_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/hesab_n_var_m"
                android:textSize="15sp">

            </TextView>

            <Button
                android:id="@+id/logInButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/i_want_sign_up_TextView"
                android:text="@string/log_in">

            </Button>
        </RelativeLayout>

    </LinearLayout>


</ScrollView>